@@ -1,6 +1,7 @@
 Build.PL
 Changes
 lib/CGI/Application/Dispatch.pm
+lib/CGI/Application/Dispatch/Regexp.pm
 Makefile.PL
 MANIFEST
 META.yml
